# stable-diffusion-photobooth

./: .dockerignore  .env  .eslintrc.js  .eslintrc.json  .gcloudignore  .gitignore  Dockerfile  Mask.ipynb  README.md  build_server.sh  cloudbuild.yaml  deps.txt  download_model.py  package.json  poetry.toml  pyproject.toml  requirements.txt  run_server.sh  tasks.json  tsconfig.json  webpack.config.js  webpack.config.ts
collage_modal/: collage.py  image_embed.py  sd_generate.py  sd_image_prompt.py  sd_inpaint.py  utils.py
server/: __init__.py  server.py  utils.py
server/web/: collage.tsx  constants.ts  dreamstudio.ts  hooks.ts  index.html  index.ts  index.tsx  photobooth.tsx  photos.tsx  prompts.json  stablediffusion.ts  store.ts
src/: index.html  index.ts
