[tool.poetry]
name = "Stable Diffusion Photobooth"
version = "0.0.1"
description = "SD Photobooth"
authors = ["Nikhil"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.group.dev.dependencies]
Flask = "^2.2.2"
mypy = "0.971"
pylint = "^2.15"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
stability-sdk = "^0.2.5"
yapf = "^0.32.0"

[tool.poetry.scripts]
server = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100

[tool.pyright]
include = ["server"]
exclude = [
  "**/__pycache__",
]
