[tool.poetry]
name = "Stable Diffusion Photobooth"
version = "0.0.1"
description = "SD Photobooth"
authors = ["Nikhil"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
gunicorn = "^20.1.0"
Flask = "^2.2.2"
python = "~3.9"
pyOpenSSL = "^22.1.0"
stability-sdk = "^0.3.0"
google-cloud-storage = "^2.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "0.971"
pylint = "^2.15"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
yapf = "^0.32.0"

[tool.poetry.scripts]
server = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100

[tool.pyright]
include = ["server"]
exclude = [
  "**/__pycache__",
]
